設定ファイルの有効無効状態を切り替え対応

--- a/source/views/application-options.html
+++ b/source/views/application-options.html
@@ -49,9 +49,12 @@
 							<tr>
 								<td data-ext-text="options_tab_content_settings_item_details_actions">options_tab_content_settings_item_details_actions</td>
 								<td>
-									<button name="editor" type="button" data-ext-text="options_tab_content_settings_item_details_actions_editor">options_tab_content_settings_item_details_actions_editor</button>
-									<button name="update" type="button" data-ext-text="options_tab_content_settings_item_details_actions_update" data-ext-data-updating="options_tab_content_settings_item_details_actions_updating">options_tab_content_settings_item_details_actions_update</button>
-									<button name="delete" type="button" data-ext-text="options_tab_content_settings_item_details_actions_delete">options_tab_content_settings_item_details_actions_delete</button>
+									<ul class="ui-line">
+										<li><button name="state" type="button"><span name="state_current" data-enabled="options_tab_content_settings_item_details_actions_state_enabled" data-disabled="options_tab_content_settings_item_details_actions_state_disabled"></span></button></li>
+										<li><button name="editor" type="button" data-ext-text="options_tab_content_settings_item_details_actions_editor">options_tab_content_settings_item_details_actions_editor</button></li>
+										<li><button name="update" type="button" data-ext-text="options_tab_content_settings_item_details_actions_update" data-ext-data-updating="options_tab_content_settings_item_details_actions_updating">options_tab_content_settings_item_details_actions_update</button></li>
+										<li><button name="delete" type="button" data-ext-text="options_tab_content_settings_item_details_actions_delete">options_tab_content_settings_item_details_actions_delete</button></li>
+									</ul>
 								</td>
 							</tr>
 						</tbody>
