--- a/source/views/setting-editor.html
+++ b/source/views/setting-editor.html
@@ -24,6 +24,14 @@
 							<input id="id" type="text" readonly />
 						</dd>
 
+						<dt data-ext-text="editor_tab_content_head_state_header">editor_tab_content_head_state_header</dt>
+						<dd>
+							<label>
+								<input id="enabled" type="checkbox" />
+								<span data-ext-text="editor_tab_content_head_state_is_enabled"></span>
+							</label>
+						</dd>
+
 						<dt data-ext-text="editor_tab_content_head_update_url">editor_tab_content_head_update_url</dt>
 						<dd>
 							<input id="update_url" type="url" />
@@ -111,12 +119,12 @@
 			<footer>
 				<button id="save" type="submit" data-ext-text="editor_save">editor_save</button>
 			</footer>
-		</div>
+			</div>
 
 
 
-		<!-- webpack -->
-		<script src="setting-editor.js"></script>
+			<!-- webpack -->
+			<script src="setting-editor.js"></script>
 	</body>
 
 </html>
