--- a/source/styles/extension/application-options.scss
+++ b/source/styles/extension/application-options.scss
@@ -66,16 +66,24 @@ ul.ui-menu {
 		}
 	}
 }
+ul.ui-line {
+	padding: 0;
+	margin: 0;
+
+	li {
+		display: inline-block;
+	}
+
+	button[name="delete"] {
+		margin-left: 1.5em;
+	}
+
+}
 
 #setting_periodDays {
 	width: 6ch;
 }
 
-button {
-	&[name="delete"] {
-		margin-left: 1.5em;
-	}
-}
 
 table {
 	margin-left: 1ch;
