--- a/source/views/popup-action.html
+++ b/source/views/popup-action.html
@@ -38,6 +38,10 @@
 					</dd>
 				</dl>
 			</section>
+
+			<section class="extension_option">
+				<a id="popup_extension_option" href="#" data-ext-text="popup_extension_option">popup_extension_option</a>
+			</section>
 		</main>
 
 		<!-- webpack -->
