次回更新日時は未指定(現在)ロケールで表示

--- a/source/views/application-options.html
+++ b/source/views/application-options.html
@@ -51,7 +51,7 @@
 							<tr>
 								<td data-ext-text="options_tab_content_settings_item_details_nextUpdate">options_tab_content_settings_item_details_nextUpdate</td>
 								<td>
-									<code name="next-update"></code>
+									<time name="next-update"></time>
 								</td>
 							</tr>
 
